name:                extensible
version:             0.4.10
synopsis:            Extensible, efficient, optics-friendly data types and effects
homepage:            https://github.com/fumieval/extensible
bug-reports:         http://github.com/fumieval/extensible/issues
description:
    This package provides a powerful framework to combine and manipulate various types of structures.
    .
    See also <https://www.schoolofhaskell.com/user/fumieval/extensible School of Haskell> for tutorials.
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2017 Fumiaki Kinoshita
category:            Data, Records, Monads
build-type:          Simple
stability:           experimental
Tested-With:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1, GHC == 8.4.1

extra-source-files:
  examples/*.hs
  .gitignore
  .travis.yml
  README.md
  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/fumieval/extensible.git

library
  exposed-modules:
    Data.Extensible
    Data.Extensible.Bits
    Data.Extensible.Class
    Data.Extensible.Dictionary
    Data.Extensible.Field
    Data.Extensible.Effect
    Data.Extensible.Effect.Default
    Data.Extensible.GetOpt
    Data.Extensible.HList
    Data.Extensible.Inclusion
    Data.Extensible.Internal
    Data.Extensible.Internal.Rig
    Data.Extensible.Label
    Data.Extensible.Match
    Data.Extensible.Nullable
    Data.Extensible.Plain
    Data.Extensible.Product
    Data.Extensible.Record
    Data.Extensible.Struct
    Data.Extensible.Sum
    Data.Extensible.Tangle
    Data.Extensible.Wrapper
    Data.Extensible.TH
  default-extensions: TypeOperators
    , DeriveDataTypeable
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , KindSignatures
    , ConstraintKinds
    , DataKinds
    , GADTs
    , Rank2Types
    , FlexibleContexts
    , FlexibleInstances
    , PolyKinds
    , CPP
  build-depends:       base >= 4.8 && <5
    , aeson
    , bytestring
    , cassava
    , comonad
    , constraints
    , deepseq
    , exceptions
    , ghc-prim
    , hashable
    , monad-skeleton >= 0.1.2
    , mtl
    , prettyprinter
    , primitive
    , profunctors
    , resourcet
    , QuickCheck
    , semigroups
    , StateVar
    , tagged
    , template-haskell
    , text
    , th-lift
    , transformers
    , unordered-containers
    , vector
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010

test-suite effects
  type: exitcode-stdio-1.0
  main-is: effects.hs
  build-depends: base, extensible
  hs-source-dirs: tests
  default-language:    Haskell2010

test-suite bits
  type: exitcode-stdio-1.0
  main-is: bits.hs
  build-depends: base, extensible, lens, QuickCheck, template-haskell
  hs-source-dirs: tests
  default-language:    Haskell2010
