cabal-version:       2.4
name:                extensible-skeleton
version:             0.0.1
synopsis:            Operational-based extensible effect library
homepage:            https://github.com/fumieval/extensible
bug-reports:         http://github.com/fumieval/extensible/issues
description:         See README.md
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2021 Fumiaki Kinoshita
category:            Monads
build-type:          Simple
stability:           experimental
Tested-With:         GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.1

extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fumieval/extensible.git

library
  build-depends: base >= 4.8 && <5
    , extensible >= 0.8 && <0.10
    , monad-skeleton ^>= 0.1
    , resourcet, membership, transformers, mtl
    , exceptions, profunctors, template-haskell
  exposed-modules:
    Data.Extensible.Effect
    Data.Extensible.Effect.Default
    Data.Extensible.Effect.TH
  ghc-options: -Wall
  hs-source-dirs: src
  default-extensions:
    TypeOperators
    DataKinds
    PolyKinds
    GADTs
    RankNTypes
    FlexibleContexts
    FlexibleInstances
  default-language: Haskell2010

test-suite effects
  type: exitcode-stdio-1.0
  main-is: effects.hs
  build-depends: base, extensible, extensible-skeleton
  hs-source-dirs: tests
  default-language:    Haskell2010
